<resources>
    <string name="app_name">UY Lab</string>
    <string name="avail3_text1">Your Application Successfully Received!</string>
    <string name="text">UY LAB \n We Make Professionals</string>
    <string name="text1">Your Data \n Successfully Saved!</string>
    <string name="text2">How Many Mode \n Available for Pen Tool?</string>
    <string name="text3">UY LAB\n We make professionals</string>
    <string name="text4">Welcome To UYLAB! \n You Can Login Here, as guest or student</string>
    <string name="earn_point">1. Integrate with our Youtube Channel so that visitor can watch our youtube videos directly from the app. Every 1mint video watch will add 2 rewards points.
        \n\n 2. Video like, subscribe reward point systems.
        \n\n 3. Daily login Reward Point.
        \n\n 4. Refer a Friend by code - Reward Point
        \n\n 5. Social Share button - Earn Reward Points bu sharing our contents on social media.
        \n\n 6. Content Submit system. Anyone can publish a post, we will review it and give reward points for each approved post.
        \n\n 7. Earn Reward point by App Review on Playstore.</string>
    <string name="avail3_text2">Thanks for your interest, Our team will contact with you as soon as possible or you can visit our office.</string>
    <string name="avail3_text3">Our Address:</string>
    <string name="avail3_text4">Mobile: +88-01777-753-399,</string>
    <string name="avail3_text5">11 Bir Uttam AK Khandakar Road,</string>
    <string name="avail3_text6">31 Mohakhali Commercial Area,</string>
    <string name="avail3_text7">Colombia Super Market, 4th Floor, Wireless Gate, 1213</string>
    <string name="complain1_text1">Your Complain Successfully Received!</string>
    <string name="internship1_text1">Your Application Successfully Received!</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_blog">Blog</string>
    <string name="menu_referral">Referral</string>
    <string name="menu_more">More</string>
    <string name="textn">UY LAB is a sister concern of UYSystem Ltd which is an ISO 9001-2008 certified software and web solution provider firm providing IT solutions abroad for last 12 years. UY LAB introduced as an IT training center where we aim to make professionalsin all IT sectors. We have arranged world-class training programs with highly skilled trainers.</string>
    <string name="title_shop">Shop</string>
    <string name="title_gifts">Gifts</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="ponit_demo">244532</string>
    <string name="arn_point_demo">224</string>
    <string name="earn_point1">Earn Point</string>
    <string name="edit_profile_btn">Edit Profile</string>
    <string name="login">Login</string>
    <string name="details">Details</string>
    <string name="balance">Balance \n 1500</string>
    <string name="labelreffer1"><![CDATA[Get 100 Point & 500BDT \n  For Each Student Enrollment]]></string>
    <string name="paymentstatus">Payment Status</string>
    <string name="paymentstatusvalue">৳ 542.00</string>
    <string name="duedate">Due Last Date: 12/10/2019</string>
    <string name="text_support">SUPPORT</string>
    <string name="notice">NOTICE</string>
    <string name="text_class">CLASS</string>
    <string name="text_backup">BACKUP</string>
    <string name="contest">CONTEST</string>
    <string name="event">EVENT</string>
    <string name="tutorial">TUTORIAL</string>
    <string name="point">POINT</string>
    <string name="jobhub">JOB HUB</string>
    <string name="text_offer">OFFER</string>
    <string name="text_internship">INTERNSHIP</string>
    <string name="text_live_class">LIVE CLASS</string>
    <string name="point_text">point</string>
    <string name="latest">Latest</string>
    <string name="line1">Next Class will we held on next \n Monday at 6mp to 8pm</string>
    <string name="line2">Next Class will we held on next Monday at 6mp to 8pm</string>
    <string name="line3">Next Class will we held on next Monday at 6mp to 8pm</string>
    <string name="oldest">Oldest</string>
    <string name="line4">Next Class will we held on next Monday at 6mp to 8pm</string>
    <string name="line5">Next Class will we held on next Monday at 6mp to 8pm</string>
    <string name="line6">Next Class will we held on next Monday at 6mp to 8pm</string>
    <string name="d">Request For 500 BDT \n Withdraw Date: 12/01/2020</string>
    <string name="history1">MD Raihan Ahmed \n GD-1919 | 500 BDT Added</string>
    <string name="class_subtitle">Find Here Class Solution</string>
    <string name="class_tab1">Graphic Design |</string>
    <string name="class_tab2">&#160; New Course +</string>
    <string name="class_username">Adnan Amhed</string>
    <string name="class_username_sub">ID46855445555</string>
    <string name="text_class_rank">Class Rank</string>
    <string name="text_last_class">Last Class</string>
    <string name="routine">Routine</string>
    <string name="project">Project</string>
    <string name="text_class_content">Class Content</string>
    <string name="class_test">Class Test</string>
    <string name="compilation">Complain</string>
    <string name="text_module">Class Module</string>
    <string name="back_to_dashboard">Back to Dashboard</string>
    <string name="contents_text_module">1. Spot Healing Brush Tool \n2. Healing Brush Tool \n3. Patch Tool \n4. Red Eye Tool \n5. Clone Tool \n6. Pattern Stamp Tool \n7. Blur, Sharpen and Smudge Tools \n8. Dodge ,Burn and Sponge Tools \n9. History Brush Tool \n10. Art History Brush Tool Class Assignment – Image Retouch.</string>
    <string-array name="array_class_number">
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string-array name="array_subjects">
        <item>Select Subject</item>
        <item>UI Design</item>
        <item>Android</item>
        <item>IOS</item>
        <item>Games And Animation</item>

    </string-array>
    <string name="texttitle">Why The Freelance \n Life May Get Easier</string>
    <string name="name">Young Hou</string>
    <string name="design_text_blog">DESIGN</string>
    <string name="design_detail_text">Most Awaited - Photoshop \nLaunches Plugin</string>
    <string name="upcoming_batch">Upcoming Batch</string>
    <string name="our_course">Our Course</string>
    <string name="seminar">Seminar</string>
    <string name="mentors">Mentor\'s</string>
    <string name="facilites">Facilites</string>
    <string name="success">Success Story</string>
    <string name="aboutUs">About Us</string>
    <string name="contact">Contact</string>
    <string name="gallery">Gallery</string>
    <string name="ourPartner">Our Partner</string>
    <string name="team"><![CDATA[Team & Condition]]></string>
    <string name="settings">Settings</string>
    <string name="due">due</string>
    <string name="text_bakup">Backup</string>
    <string name="backup_subtitle">Request</string>
    <string name="request_backup">Request For Backup</string>
    <string name="backup_hint1">Write Here Class Topic</string>
    <string name="backup_hint2">Write Class Number</string>
    <string name="backup_btn_text">Submit Request</string>
    <string name="backup_text3">Backup Status Panel</string>
    <string name="text_backup4">Total Backup 5 for one Course | Click pending Button to see backup time schedule</string>
    <string name="backup_ready">Ready</string>
    <string name="pending">Pending</string>
    <string name="close">Close</string>
    <string name="request_title">Your Request \nSuccessfully Received!</string>
    <string name="finised">Finished</string>
    <string name="text_support_small">Support</string>
    <string name="support_subtitle">Get Any Support From Our Agent</string>
    <string name="trainer_hotline">Trainer\'s Hotline</string>
    <string name="trainer_number">0192000177</string>
    <string name="text_t">Welcome To UYLAB! \nYou Can Login Here, as guest or student</string>
    <string name="jobR">Inknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic Inknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic</string>
    <string name="jobF">Inknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic Inknown printer took</string>
    <string name="upcomming_event">Upcoming Event</string>
    <string name="event_sub">Find Your Class Tutorial Here</string>
    <string name="more_event">More Event</string>
    <string name="text_event_up_title">Graphic Design FREE SEMINAR MONDAY</string>
    <string name="event_details_sub">Graphic Design FREE SEMINAR MONDAY</string>
    <string name="event_details">Unknown printer took a galley of type andscrambled it to make a type specimen book. Ithassurvivednotably five centuries, but also the leap into electronic Unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived notably five centuries, but also the leap into electronic Unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived notably five centuries, but also the leap into electronic</string>
    <string name="btn_join_seminar">Join Seminar</string>
    <string name="seminar_join_dialog">Seminar Join</string>
    <string name="event_hint1">Mobile Number</string>
    <string name="email_hint">Email Address</string>
    <string name="submit">Submit</string>
    <string name="your_number">Your Name</string>
    <string name="note">Note: \nYou must need to share your contact information to avail the current offer.</string>
    <string name="application_status">Your Application \nSuccessfully Received!</string>
    <string name="terms_and_conditions"> It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like). </string>
    <string name="address">Our Address: \nMobile: +88-01777-753-399 \n11 Bir Uttam AK Khandakar Road, \n31 Mohakhali Commercial Area, \nColombia Super Market, 4th Floor, Wireless Gate, 1213</string>
    <string name="back_to_home">Back To Home</string>
</resources>