<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.profile">

    <ImageView
        android:id="@+id/profile_img_background_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/ic_profile_img_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/imagecard"
        android:layout_width="216dp"
        android:layout_height="216dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="250dp"
        app:layout_constraintBottom_toBottomOf="@+id/profile_img_background_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_img_background_id">

        <androidx.cardview.widget.CardView
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_gravity="center"
            app:cardCornerRadius="250dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_person_img" />

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/pointbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ponit_demo"
        android:textColor="@color/white"
        android:background="@drawable/profile_button_1"
        app:layout_constraintTop_toBottomOf="@id/imagecard"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
       />

    <Button
        android:id="@+id/globalrankbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/arn_point_demo"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:background="@drawable/profile_button_1"
        app:layout_constraintTop_toBottomOf="@id/pointbtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Button
        android:id="@+id/earnpointbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
       android:text="@string/earn_point1"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:background="@drawable/profile_button_1"
        app:layout_constraintTop_toBottomOf="@id/globalrankbtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/editprofilebtn"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:text="@string/edit_profile_btn"
        android:textColor="@color/white"
        android:textAllCaps="false"

        android:background="@drawable/profile_button2"
        app:layout_constraintTop_toBottomOf="@id/earnpointbtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>