<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout2_avail4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout1_avail4">

        <TextView
            android:id="@+id/text1_avail_4"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/avail3_text1"
            android:textColor="#000000"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.525"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_avail_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="@+id/text1_avail_4"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toStartOf="@+id/text1_avail_4"
            app:layout_constraintTop_toBottomOf="@+id/text1_avail_4"
            app:srcCompat="@drawable/ic_success" />


        <Button
            android:id="@+id/homeBtn_avail_4"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/homebtn_avail_3"
            android:text="Back To Home"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@+id/image_avail_4"
            app:layout_constraintStart_toStartOf="@+id/image_avail_4"
            app:layout_constraintTop_toBottomOf="@+id/image_avail_4" />

        <TextView
            android:id="@+id/text3_avail_4"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/avail3_text2"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text2_avail_4"
            app:layout_constraintStart_toStartOf="@+id/text2_avail_4"
            app:layout_constraintTop_toBottomOf="@+id/text2_avail_4"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text2_avail_4"
            android:layout_width="48dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            android:text="Note : "
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/homeBtn_avail_4"
            app:layout_constraintStart_toStartOf="@+id/homeBtn_avail_4"
            app:layout_constraintTop_toBottomOf="@+id/homeBtn_avail_4" />

        <TextView
            android:id="@+id/text4_avail_4"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:text="@string/avail3_text3"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/text3_avail_4"
            app:layout_constraintStart_toStartOf="@+id/text3_avail_4"
            app:layout_constraintTop_toBottomOf="@+id/text3_avail_4" />

        <TextView
            android:id="@+id/text5_avail_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avail3_text4"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/text4_avail_4"
            app:layout_constraintStart_toStartOf="@+id/text4_avail_4"
            app:layout_constraintTop_toBottomOf="@+id/text4_avail_4" />

        <TextView
            android:id="@+id/text6_avail_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avail3_text5"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/text5_avail_4"
            app:layout_constraintStart_toStartOf="@+id/text5_avail_4"
            app:layout_constraintTop_toBottomOf="@+id/text5_avail_4" />

        <TextView
            android:id="@+id/text7_avail_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avail3_text6"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/text6_avail_4"
            app:layout_constraintStart_toStartOf="@+id/text6_avail_4"
            app:layout_constraintTop_toBottomOf="@+id/text6_avail_4" />

        <TextView
            android:id="@+id/text8_avail_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avail3_text7"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/text7_avail_4"
            app:layout_constraintStart_toStartOf="@+id/text7_avail_4"
            app:layout_constraintTop_toBottomOf="@+id/text7_avail_4" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout1_avail4"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:background="#F0EFEF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="131dp"
            android:layout_height="37dp"
            android:layout_marginStart="28dp"
            android:text="Event"
            android:textColor="#000000"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.378" />

        <Button
            android:id="@+id/classTutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Find Your Class Tutorial Here"
            android:textAllCaps="false"
            android:background="@android:color/transparent"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="55dp"
            android:layout_height="54dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/classTutBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_event" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="38dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_notification" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>