<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout8"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:background="#F2F2F2"
                app:layout_constraintTop_toTopOf="parent"
                >

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="170dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="88dp"
                    android:text="@string/event"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="220dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="17dp"
                    android:text="@string/event_sub"
                    android:textColor="@android:color/black"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView18"
                    app:layout_constraintTop_toBottomOf="@+id/textView18" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="21dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="26dp"
                    android:layout_marginEnd="35dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_notification" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="30dp"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/alarm" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="45dp"
                    android:layout_height="43dp"
                    android:layout_marginTop="39dp"
                    android:layout_marginEnd="19dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView19"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView9"
                    app:srcCompat="@drawable/ic_calender" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="6dp"
                    android:layout_height="9dp"
                    android:text="6"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="7sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView10"
                    app:layout_constraintEnd_toEndOf="@+id/imageView10"
                    app:layout_constraintStart_toStartOf="@+id/imageView10"
                    app:layout_constraintTop_toTopOf="@+id/imageView10" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/application_status"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <ImageView
                android:layout_gravity="center"
                android:layout_marginTop="22dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_success"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnsubmit"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="@drawable/button_apply"
                android:fontFamily="@font/poppins_light"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />



            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="39dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/note"
                android:textColor="@android:color/black"
                android:textAlignment="center"

                />

            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="66dp"
                android:minHeight="200dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="100dp"
                android:text="@string/address"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>